--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -1113,32 +1113,32 @@
 
  ### Iran ###
  #Western
- PER.conservatism: "£generic_conservatism_small Iranian Conservatives"
+ PER.conservatism: "£PER_conservatism Mohafeze Karân"
  PER.conservatism_desc: "Iranian conservative democrats try to keep their proximity with traditionalist ideals, and like to stay within the general frameworks of old customs, whilst also trying to push for a moderately liberal society. They have a slower approach when it comes to reform, implementing policies at a slower pace as to not cause problems with the conservative elements in the nation."
- PER.liberalism: "£generic_liberalism_small Iranian Liberals"
+ PER.liberalism: "£PER_liberalism Liberalân"
  PER.liberalism_desc: "Iranian Liberals seek out more secular form of government, pushing for human rights, individual freedom and democracy. They often push for greater civil liberties which puts them at odds with the conservative groups in the country."
- PER.socialism: "£PER_socialism  Hezb-e Iran"
+ PER.socialism: "£PER_socialism  Hezb-é Irān"
  PER.socialism_icon: "£PER_socialism"
- PER.socialism_desc: "Social Democracy - Hezb-e Iran, also known as the Iran Party, was often referred to as the backbone of the National Front party. Being created by mostly European-Education technocrats, the Iran Party promotes Social Democracy and Liberal Nationalism in Iran."
- PER.Western_Autocracy: "£PER_Western_Autocracy Constitutionalists"
+ PER.socialism_desc: "Social Democracy - Hezb-é Iran, also known as the Iran Party, was often referred to as the backbone of the National Front party. Being created by mostly European-Education technocrats, the Iran Party promotes Social Democracy and Liberal Nationalism in Iran."
+ PER.Western_Autocracy: "£PER_Western_Autocracy  Hezb-é Mashrut-é Iran (§CL-D§!)"
  PER.Western_Autocracy_icon: "£PER_Western_Autocracy"
- PER.Western_Autocracy_desc: "Constitutional Monarchy - The House of Pahlavi is often cited for its accomplishments in modernizing Iran, and setting the framework for modern Iranian nationalism. The House of Pahlavi saught to push its efforts for modernization by largely secularizing the country, which often put it at odds with the Islamists elements in the country."
+ PER.Western_Autocracy_desc: "Constitutionalist Party of Iran - The Constitutionalist Party of Iran (Liberal-Democrat) awaits the return of Reza Pahlavi and strongly condemns the revolutionaries whom overthrew him. Though they do not want an absolute monarchy, they have hinted at more direct control being given to the Shah compared to other constitutionalist groups."
 
  #Emerging
- PER.Communist-State: "£PER_communism Hezb-e Kommunist-e Iran"
+ PER.Communist-State: "£PER_communism Hezb-é Tude-ye Irân"
  PER.Communist-State_icon: "£PER_communism"
- PER.Communist-State_desc: "Communism - The Communist Party of Iran (CPI) was founded in 1983 after having merged with the Komala party, and the Union of Communist Militants. The party views the USSR after Stalin as too capatalist, and they oppose the policies of the Tudeh party from the 1950's and onward. They envision a communist state, and the party cadres generally operate autonomously."
- PER.Conservative: ""
- PER.Conservative_desc: ""
- PER.Autocracy: ""
- PER.Autocracy_desc: ""
- PER.Vilayat_e_Faqih: "£generic_Vilayat_e_Faqih_small Principalists"
- PER.hardline_totalitarian: "£generic_Vilayat_e_Faqih_small Hezb-e Jomhuriye Eslami"
+ PER.Communist-State_desc: "Communism - The Party of the Masses of Iran (Tudeh) Formed in 1941, with Soleiman Mirza Eskandari as its leader, and it had considerable influence in its early years and played a crucial role during Mohammad Mosaddegh's campaign to nationalize the Anglo-Persian Oil Company. The group became Pro-Soviet following the Iran Oil Crisis of 1946, and was brutally repressed ever since."
+ PER.Conservative: "£generic_Mod_Vilayat_e_Faqih_small Sepāh-é Pāsdarān"
+ PER.Conservative_desc: "Shi'ite Militarism - The Islamic Revolutionary Guard Corps (IRGC) is a branch of the Iranian Armed Forces, founded after the Iranian Revolution on 22 April 1979 by order of Ayatollah Ruhollah Khomeini in order to defend Iranian borders and maintain internal order. The organization has expanded into the political sphere with many of its former members running as hardliners for office."
+ PER.Autocracy: "£PER_autocracy Jâme'e Mādarressin-é Qom"
+ PER.Autocracy_desc: "Radical Shi'ism - The Society of Seminary Teachers of Qom was established by a group of Ayatollah Khomeinis students, in order to organize political activities of Khomeini's followers and promote his revolutionary interpretation of Islam, such as the idea of Vilayat-é Faqih (Islamic Government)."
+ PER.Vilayat_e_Faqih: "£PER_Vilayat_e_Faqih  Osul-Garāyān"
+ PER.hardline_totalitarian: "£generic_Vilayat_e_Faqih_small Hezb-é Jomhuriye Eslami"
  PER.hardline_totalitarian_desc: ""
  PER.Vilayat_e_Faqih_desc: ""
- PER.Mod_Vilayat_e_Faqih: "£generic_Mod_Vilayat_e_Faqih_small Reformists"
+ PER.Mod_Vilayat_e_Faqih: "£PER_Mod_Vilayat_e_Faqih  Eslâh-Talabân"
  PER.Mod_Vilayat_e_Faqih_desc: ""
- PER.anarchist_communism: "£PER_anarchist_communism Mojahedin-e Khalq"
+ PER.anarchist_communism: "£PER_anarchist_communism Mojâhedin-é Khalq-é Irân"
  PER.anarchist_communism_icon: "£PER_anarchist_communism"
  PER.anarchist_communism_desc: "Left-Wing Islamist - The MEK, also known as The Peoples Mojahedin Organization of Iran were formed in 1965 in opposition to the Pahlavi Dynasty, and their founding principles were heavily influenced by Marxism and Islamism. They are often referred to as a \"Cult Like\" group, as their party structure revolves around Maryam and Massoud Rajavi. The MEK wants to implement a series of plans that would push Iran towards a more federalized, and socialist state."
 
@@ -1147,40 +1147,38 @@
  PER.Caliphate_desc: ""
 
  #Non-alligned
- PER.Neutral_conservatism: " £PER_Neutral_conservatism  Jebhe-ye Melli"
+ PER.Neutral_conservatism: " £PER_Neutral_conservatism  Jebhe-ye Melli-ye Irân"
  PER.Neutral_conservatism_icon: "£PER_Neutral_conservatism"
  PER.Neutral_conservatism_desc: "Iranian Nationalism - Jebhe-ye Melli-ye Iran, or otherwise known as the National Front, is an Iranian Nationalist party founded by Mohammad Mossadegh. During Mohammad Reza Pahlavis reign, the political atmosphere got so restrictive that the National Front ceased to exist after some years. Finally, in 1977 when the Shah's reign was slowly coming to an end, Karim Sanjabi revived the National Front and resumed its activities within Iran, until being banned by the Ayatollah's regime."
- PER.oligarchism: "£generic_oligarchism_small Green Movement"
+ PER.oligarchism: "£generic_oligarchism_small Oligārsh-Haye Irān"
  PER.oligarchism_desc: ""
- PER.neutral_Social: "£generic_neutral_Social_small Freedom Movement"
- PER.neutral_Social_desc: ""
- PER.Neutral_Libertarian: ""
+ PER.neutral_Social: "£PER_neutral_Social Nahżat-é āzādi-é Irān"
+ PER.neutral_Social_desc: "Iranian Democracy - The Freedom Movement of Iran describe themselves as "Muslims, Iranians, Constitutionalists and Mossadeghists". It is amongst the oldest parties active in Iran, and they have been known to be a semi-opposition group to the Islamic Republic. The Freedom Movement of Iran is based on a moderate interpretation of Islam. It rejects both royal and clerical dictatorship and is in in favor of political and economic liberalism."
+ PER.Neutral_Libertarian: "£generic_Neutral_Libertarian_small Ekhtyiâr Garâyan"
  PER.Neutral_Libertarian_desc: ""
- PER.Neutral_Autocracy: ""
- PER.Neutral_Autocracy_desc: ""
- PER.Neutral_Communism: "£generic_Neutral_Communism_small Hezb-e Kommunist-e Kargari"
- PER.Neutral_Communism_desc: "Communism - Hezb-e Kommunist-e Kargari-ye Iran, also known as the Worker-Communist Party of Iran, was established in 1991 to overthrow the Islamic Republic and establish a socialist republic in its place."
- PER.Neutral_green: ""
- PER.Neutral_green_desc: ""
- PER.Neutral_Muslim_Brotherhood: ""
- PER.Neutral_Muslim_Brotherhood_desc: ""
+ PER.Neutral_Autocracy: "£PER_Neutral_Autocracy Restârt"
+ PER.Neutral_Autocracy_desc: "Conspiracists - Restart (Literally meaning a new start) is a mysticist political party headed by Seyed Mohammad Hosseini who believes in the creation of a Sufi Empire in Iran. The group has been described as one ran by conspiracists due to their beliefs, one example being that Khatami is a Zoroastrian Spy who wants to restore the Pahlavi dynasty. Furthermore, the group supports the creation of an Iranian version of the second amendment where citizens have the right to bear arms, and their party have adopted the slogan "Make Iran Great Again". The group also blames minorities such as Zoroastrians, Baha'is and Jews for Irans problems."
+ PER.Neutral_Communism: "£PER_Neutral_Communism Hezb-é Kommunist-é Kârgari"
+ PER.Neutral_Communism_desc: "Communism - Hezb-é Kommunist-é Kargari-ye Iran, also known as the Worker-Communist Party of Iran, was established in 1991 to overthrow the Islamic Republic and establish a socialist republic in its place."
+ PER.Neutral_green: "£PER_Neutral_green Hezb-é Sabzhā-ye Irān"
+ PER.Neutral_green_desc: "Green Politics - The Green party of Iran has a radical stance towards the Iranian Department of Environment and views the governmental body as a coverup for the mismanagements of the Islamic Republic."
+ PER.Neutral_Muslim_Brotherhood: "£PER_Neutral_Muslim_Brotherhood Rāh-é Sabz-é Omid"
+ PER.Neutral_Muslim_Brotherhood_desc: "Iranian Republicanism - Established by Mir-Hossein Mousavi, the Green Path of Hope is an Iranian Association that seeks a path towards democracy through peaceful means. Mousavi opted to choose 'Path' rather than 'Party' as parties had to be approved by the government, which Mousavi did not recognize as legitimate. The Green Path of Hope is a reformist movement, incorporating Republican and moderate Islamic ideals to form its core ideology."
 
  #Nationalist
- PER.Nat_Autocracy: "£generic_Nat_Autocracy_small Revolutionary Guard"
- PER.Nat_Autocracy_artesh: "£GFX_PER_military_junta  Artesh-e Iran"
- PER.Nat_Autocracy_artesh_desc: "Artesh-e Iran, or the Iranian Armed Forces was established in 550 B.C, with its most modern form being created in 1921 during the rise of the Pahlavi Dynasty. The Artesh remained mostly apolitical in Iranian affairs, in both the Pahlavi era, and Islamic Republics era. Throughout history, the Artesh has remained loyal to the government in power, but they also don't hesitate to push for more nationalistic values in the country."
- PER.Nat_Autocracy_desc: ""
- PER.Nat_Fascism: "£generic_Nat_Fascism_small Fascists"
- PER.Nat_Fascism_desc: ""
- PER.Nat_Populism: "£PER_Nat_Populism_small Hezb-e Pan-Irani"
+ PER.Nat_Autocracy: "£GFX_PER_military_junta  Arteš-é Irān"
+ PER.Nat_Autocracy_desc: "Artesh-é Iran, or the Iranian Armed Forces was established in 550 B.C, with its most modern form being created in 1921 during the rise of the Pahlavi Dynasty. The Artesh remained mostly apolitical in Iranian affairs, in both the Pahlavi era, and Islamic Republics era. Throughout history, the Artesh has remained loyal to the government in power, but they have intervened in some instances in Iranian political history."
+ PER.Nat_Fascism: "£PER_fascism Anjoman-é Pâdeshâhi"
+ PER.Nat_Fascism_desc: "Ultra-Nationalism - The Kingdom Assembly of Iran, also known as 'Tondâr' (Meaning Thunder in Persian) is an ultra-nationalist monarchist party. The group seeks the restoration of a monarchy, be it the Pahlavi's or a new one. The group is heavily against Islam, and the religion as a whole, and they view it as foreign and alien. They also strongly discriminate against Arabs, using the word 'Tâzi' to draw a distinction between Iranians and Arabs."
+ PER.Nat_Populism: "£PER_Nat_Populism_small Hezb-é Pān-Irānist"
  PER.Nat_Populism_icon: "£PER_Nat_Populism_small"
- PER.Nat_Populism_desc: "Iranian Nationalism - The Pan Iranist Party emerged in 1952 to push for the unification of Iranic peoples, and the return of Irans territory lost over a period of humiliation and defeat in the 18th and 19th century. They strongly oppose the involvement of foreign powers in Iran and the region, and highly value national independence above all else."
- PER.nation_party: "£PER_Nat_Populism_small Hezb-e Mellat"
+ PER.Nat_Populism_desc: "Pan Iranism - The Pan Iranist Party emerged in 1952 to push for the unification of Iranic peoples, and the return of Irans territory lost over a period of humiliation and defeat in the 18th and 19th century. They strongly oppose the involvement of foreign powers in Iran and the region, and highly value national independence above all else."
+ PER.nation_party: "£PER_Nat_Populism_small Hezb-é Mellat"
  PER.nation_party_desc: "Iranian Nationalism - Hezb-e Mellat-e Iran, or the Nation Party, split from the Pan-Iranists in October of 1951, following a dispute between Pezekshapour and Forouhar. Forouhar wanted to push a more democratic agenda, whilst Pezekshapour wanted to push the party towards authoritarianism, which lead Forouhar to create the Nation Party."
- PER.Monarchist: "£PER_monarchism  Saltanat-e Pahlavi"
+ PER.Monarchist: "£PER_monarchism  Saltānāt-é Pāhlavi"
  PER.Monarchist_icon: "£PER_monarchism"
  PER.Monarchist_desc: "Shahanshahi - The House of Pahlavi is often cited for its accomplishments in modernizing Iran, and setting the framework for modern Iranian nationalism. The House of Pahlavi saught to push its efforts for modernization by largely secularizing the country, which often put it at odds with the Islamists elements in the country."
- PER.Monarchist_highway: "£generic_Monarchist_small Saltanat-e Highway"
+ PER.Monarchist_highway: "£generic_Monarchist_small Saltanat-é Highway"
  PER.Monarchist_highway_desc: ""
 
  ### Poland ###
