Added Drift Defense Factor

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -6,7 +6,8 @@ v1.10.0
  Balance:
   - Increased Strength losses in combat by (around 2 times greater), to make losses more realistic and decrease amount of 0 losses in combat
   - Added a Monthly Productivity Growth penalty to high corporate tax rate
-  - It is not a blocker that if you have 15% Chinese/Russian influence you can't join the European Union
+  - It is now a blocker that if you have 15% Chinese/Russian influence you can't join the European Union
+  - Government Popularity now provides Drift Defence Factor of more defence the more popular you are
 
  Bugfixes:
   - Fixed a bug when the opinion modifiers reached 100 or -100 due to an incorrectly configured decay
