--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -373,7 +373,7 @@
  current_government_coalition_list: "[show_ruling_party] [Gov_Western_Autocracy_loc][Gov_conservatism_loc][Gov_liberalism_loc][Gov_socialism_loc][Gov_Communist-State_loc][Gov_anarchist_communism_loc][Gov_Conservative_loc][Gov_Autocracy_loc][Gov_Mod_Vilayat_e_Faqih_loc][Gov_Vilayat_e_Faqih_loc][Gov_Kingdom_loc][Gov_Caliphate_loc][Gov_Neutral_Muslim_Brotherhood_loc][Gov_Neutral_Autocracy_loc][Gov_Neutral_conservatism_loc][Gov_oligarchism_loc][Gov_Neutral_Libertarian_loc][Gov_Neutral_green_loc][Gov_neutral_Social_loc][Gov_Neutral_Communism_loc][Gov_Nat_Populism_loc][Gov_Nat_Fascism_loc][Gov_Nat_Autocracy_loc][Gov_Monarchist_loc]"
 
  approval_rating_TOOLTIP: "The current popularity of the Government is [?government_coalition_strength|%1]"
- approval_rating_TOOLTIP_DELAYED: "This represents a [?government_coalition_differential|%1] difference from the last election when the Government Parties got [?government_coalition_strength_elect|%1] of the vote.\n\nCurrent Effects:\n§Y£stability_texticon  Stability§!: [?ROOT.gov_pop_stability_factor|%+]\n§Y£political_power_texticon  Political Power Gain§!: [?ROOT.gov_pop_political_power_factor|%+]\n"
+ approval_rating_TOOLTIP_DELAYED: "This represents a [?government_coalition_differential|%1] difference from the last election when the Government Parties got [?government_coalition_strength_elect|%1] of the vote.\n\nCurrent Effects:\n§Y£stability_texticon  Stability§!: [?ROOT.gov_pop_stability_factor|%+]\n§Y£political_power_texticon  Political Power Gain§!: [?ROOT.gov_pop_political_power_factor|%+]\n§Y£drift_defence_texticon  Ideology Drift Defense§!: [?ROOT.gov_pop_drift_defence_factor|%+]"
 
  ### Default - For all without separate entries ###
  #Western
@@ -463,7 +463,7 @@
  #nationalist
  generic.Nat_Populism: "£generic_Nat_Populism_small Right Wing Populists"
  generic.Nat_Populism_icon: "£generic_Nat_Populism_small"
- generic.Nat_Populism_desc: "Right-wing populism refers to a specific branch of populist ideology that seeks to empower the people against perceived elites that control society. Right-wing populists typically support anti-globalization, protectionism, nativism, nationalism, and an opposition to immigration."
+ generic.Nat_Populism_desc: "Right-wing populism refers to a specific branch of populist ideology that seeks to empower the people against perceived elites that control society. Right-wing populists typically support anti-globalization, protectionism, nativism, nationalism, and opposition to immigration."
 
  generic.Nat_Fascism: "£generic_Nat_Fascism_small Fascists"
  generic.Nat_Fascism_icon: "£generic_Nat_Fascism_small"
