--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -4643,21 +4643,21 @@
  SPL_fascism_ADJ: "Sao Paulan"
  SPL_communism_ADJ: "Sao Paulan"
 
- GRL_communism: "Greenland"
- GRL_communism_DEF: "Greenland"
- GRL_fascism: "Greenland"
- GRL_fascism_DEF: "Greenland"
- GRL_democratic: "Greenland"
- GRL_democratic_DEF: "Greenland"
- GRL_neutrality: "Greenland"
- GRL_neutrality_DEF: "Greenland"
- GRL_nationalist: "Greenland"
- GRL_nationalist_DEF: "Greenland"
- GRL_nationalist_ADJ: "Greenlander"
- GRL_democratic_ADJ: "Greenlander"
- GRL_neutrality_ADJ: "Greenlander"
- GRL_fascism_ADJ: "Greenlander"
- GRL_communism_ADJ: "Greenlander"
+ GRN_communism: "Greenland"
+ GRN_communism_DEF: "Greenland"
+ GRN_fascism: "Greenland"
+ GRN_fascism_DEF: "Greenland"
+ GRN_democratic: "Greenland"
+ GRN_democratic_DEF: "Greenland"
+ GRN_neutrality: "Greenland"
+ GRN_neutrality_DEF: "Greenland"
+ GRN_nationalist: "Greenland"
+ GRN_nationalist_DEF: "Greenland"
+ GRN_nationalist_ADJ: "Greenlandic"
+ GRN_democratic_ADJ: "Greenlandic"
+ GRN_neutrality_ADJ: "Greenlandic"
+ GRN_fascism_ADJ: "Greenlandic"
+ GRN_communism_ADJ: "Greenlandic"
 
  FGU_communism: "French Guiana"
  FGU_communism_DEF: "French Guiana"
