Removed GRL for GRN
Removed all possible instances of GRL tag and replaced with new GRN tag for Greenland

--- a/localisation/french/MD_tribute_ideas_l_french.yml
+++ b/localisation/french/MD_tribute_ideas_l_french.yml
@@ -95,7 +95,7 @@
  GNC_tribute: "Exploitation économique par [GNC.GetNameDef]"
  GRA_tribute: "Exploitation économique par [GRA.GetNameDef]"
  GRE_tribute: "Exploitation économique par [GRE.GetNameDef]"
- GRL_tribute: "Exploitation économique par [GRL.GetNameDef]"
+ GRN_tribute: "Exploitation économique par [GRN.GetNameDef]"
  GUA_tribute: "Exploitation économique par [GUA.GetNameDef]"
  GUB_tribute: "Exploitation économique par [GUB.GetNameDef]"
  GUI_tribute: "Exploitation économique par [GUI.GetNameDef]"
