--- a/localisation/russian/MD_formable_nations_l_russian.yml
+++ b/localisation/russian/MD_formable_nations_l_russian.yml
@@ -123,8 +123,8 @@
  SCA_integrate_FIN_desc: ""
  SCA_integrate_ICE: "Интегрировать Исландию"
  SCA_integrate_ICE_desc: ""
- SCA_integrate_GRL: "Интегрировать Гренландию"
- SCA_integrate_GRL_desc: ""
+ SCA_integrate_GRN: "Интегрировать Гренландию"
+ SCA_integrate_GRN_desc: ""
  
  SCA_update_flag: "$update_flag_and_name$"
  SCA_update_flag_desc: "$update_flag_and_name_desc$"
@@ -134,8 +134,8 @@
  # form_NORD_category: "Северный союз"
  # form_NORD_category_desc: "Тест"
 
- # NORD_integrate_GRL: "Интегрировать Гренландию"
- # NORD_integrate_GRL_desc: ""
+ # NORD_integrate_GRN: "Интегрировать Гренландию"
+ # NORD_integrate_GRN_desc: ""
  # NORD_integrate_ICE: "Интегрировать Исландию"
  # NORD_integrate_ICE_desc: ""
  
