--- a/localisation/english/MD_tribute_ideas_l_english.yml
+++ b/localisation/english/MD_tribute_ideas_l_english.yml
@@ -95,7 +95,7 @@
  GNC_tribute: "Economic Exploitation by [GNC.GetName]"
  GRA_tribute: "Economic Exploitation by [GRA.GetName]"
  GRE_tribute: "Economic Exploitation by [GRE.GetName]"
- GRL_tribute: "Economic Exploitation by [GRL.GetName]"
+ GRN_tribute: "Economic Exploitation by [GRN.GetName]"
  GUA_tribute: "Economic Exploitation by [GUA.GetName]"
  GUB_tribute: "Economic Exploitation by [GUB.GetName]"
  GUI_tribute: "Economic Exploitation by [GUI.GetName]"
