--- a/localisation/russian/MD_tribute_ideas_l_russian.yml
+++ b/localisation/russian/MD_tribute_ideas_l_russian.yml
@@ -95,7 +95,7 @@
  GNC_tribute: "Экономическая эксплуатация от [GNC.GetName]"
  GRA_tribute: "Экономическая эксплуатация от [GRA.GetName]"
  GRE_tribute: "Экономическая эксплуатация от [GRE.GetName]"
- GRL_tribute: "Экономическая эксплуатация от [GRL.GetName]"
+ GRN_tribute: "Экономическая эксплуатация от [GRN.GetName]"
  GUA_tribute: "Экономическая эксплуатация от [GUA.GetName]"
  GUB_tribute: "Экономическая эксплуатация от [GUB.GetName]"
  GUI_tribute: "Экономическая эксплуатация от [GUI.GetName]"
