hkg gui working

--- a/localisation/english/MD_focus_HKG_l_english.yml
+++ b/localisation/english/MD_focus_HKG_l_english.yml
@@ -273,10 +273,16 @@
  #Tooltips
  Basic_Law_HKG_idea_tt: "§HThis idea will be cancalled after [HKG.GetFlag]Hong Kong Declare its §RIndependent.§!§!"
  HKG_millitary_block_tt: "§WAs a §YS.A.R§! of §O[CHI.GetFlag]China§!, §Y[HKG.GetFlag]Hong Kong§! is not allowed to have any army and cannot change its military policy.§!"
- OPEN_LegCo_BUTTON: "Legislative Council of the Hong Kong S.A.R"
- OPEN_LegCo_BUTTON_TT: "WIP DESC"
+ OPEN_LegCo_BUTTON: "§3Legislative Council§! of Hong Kong S.A.R"
+ OPEN_LegCo_BUTTON_TT: "§3The Legislative Council§! of the Hong Kong S.A.R. is the unicameral legislature of Hong Kong. It sits under China's \"one country, two systems\" constitutional arrangement, and is the power centre of Hong Kong's hybrid representative democracy."
  CLOSE_LegCo_BUTTON: "Close the LegCo"
  HKG_LegCo_TITLE: "Legislative Council"
+ legco_pro_beijing_seats: "§CPro-establishment Camp§! Seats: §C<WIP>§!"
+ legco_pan_democracy_seats: "§8Pan-democracy Camp§! Seats: §8<WIP>§!"
+ legco_localist_seats: "§GLocalist Camp§! Seats: §G<WIP>§!"
+ legco_total_seats: "Total: §Y<WIP>§!"
+ legco_approvement_seats: "Apprevement: §G<WIP>§!"
+ legco_opposition_seats: "Opposition: §R<WIP>§!"
  HONG_KONG_POLITICS_TT: "\nThe Politics of §Y[HKG.GetFlag]Hong Kong§! could be devided into three camp, §CPro-establishment camp§!, §8Pan-democracy camp§! and §GLocalist camp§!. Seats in the Legislative Council are decided by their approval ratings."
  ###DYNAMIC MODIFIERS
 #Housing Issue
