Fixed state completion rewards
Reworked state rewards to now give to either 1161 (Kitaa) and/or 1162 (Tunu).

Additionally, added localization for national wellbeing tab and swapped foreign security law

--- a/localisation/english/MD_focus_GRN_l_english.yml
+++ b/localisation/english/MD_focus_GRN_l_english.yml
@@ -85,6 +85,7 @@
  GRN_not_independance_tt:0 "§RYou won't be able to become independent!§W\n"
  GRN_independance_tt:0 "§GGrants your independence! More of the focus tree will become available to you.§W\n"
 
+ GRN_national_wellbeing:0 "National Wellbeing"
  GRN_remove_alcohol_abuse_tt:0 "Remove your current idea with §YGreenlandic Alcohol Abuse§!\n"
  GRN_modify_alcohol_abuse_tt:0 "Greenlandic alcohol abuse changes by [?GRN.modify_alcohol_abuse|0=-] (Current: [?GRN.alcohol_abuse_var|0-])"
  GRN_alcohol_abuse:0 "Greenlandic Alcohol Abuse"
