--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -2188,7 +2188,7 @@
  VICTORY_POINTS_7702: "Kuqa"
  VICTORY_POINTS_10545: "Korla"
  VICTORY_POINTS_7792: "Yuli"
- VICTORY_POINTS_14743: "Zhaosu"
+ VICTORY_POINTS_17143: "Zhaosu"
  VICTORY_POINTS_1970: "Yarkant"
  VICTORY_POINTS_8112: "Hotan"
  VICTORY_POINTS_4947: "Lop Nur"
@@ -3146,7 +3146,8 @@
  VICTORY_POINTS_6034: "Bandar Seri Begawan"
  VICTORY_POINTS_7869: "Whitehorse"
  VICTORY_POINTS_10527: "Yellowknife"
- VICTORY_POINTS_2407: "Hay River"
+ VICTORY_POINTS_2407: "High Level"
+ VICTORY_POINTS_13075: "Hay River"
  VICTORY_POINTS_1408: "Vancouver"
  VICTORY_POINTS_7259: "Victoria"
  VICTORY_POINTS_7677: "Kelowna"
