--- a/localisation/english/MD_focus_BLR_l_english.yml
+++ b/localisation/english/MD_focus_BLR_l_english.yml
@@ -287,8 +287,8 @@
  BLR_North_Korea_workers: "North Korean Workers"
  BLR_SMERSH_2: "SMERSH 2.0"
  BLR_SMERSH_2_desc: "We will revive SMERSH. It is time to use the Soviet experience for the benefit of the nation"
- BLR_arest_silovic: "Arrest of Security Forces"
- BLR_arest_silovic_desc: "A lot of security forces turned out to disagree with the new government, it's time to arrest them"
+ BLR_arest_silovic: "Purge of Security Forces"
+ BLR_arest_silovic_desc: "A lot of security forces turned out to disagree with the new government, it's time to purge them"
  BLR_antigay_propaganda_laws: "Anti-gay Propaganda Laws"
  BLR_antigay_propaganda_laws_desc: "It's time to legally ban LGBT people in our country"
  BLR_clean_soc_net: "Clean Social Network"
