--- a/localisation/simp_chinese/MD_focus_BLR_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_BLR_l_simp_chinese.yml
@@ -189,10 +189,10 @@
  BLR_rotation_KGB: "KGB的轮换"
  BLR_rotation_KGB_desc: "我们正在轮换人员，因为我们现在需要一个强大且有力的组织。"
  BLR_North_Korea_workers: "朝鲜工人"
- BLR_SMERSH_2: "SMERSH 2.0"
- BLR_SMERSH_2_desc: "我们将复活SMERSH。是时候利用苏联的经验造福国家了。"
- BLR_arest_silovic: "逮捕安全部队"
- BLR_arest_silovic_desc: "许多安保机关与新政府意见相左，是时候逮捕他们了"
+ BLR_SMERSH_2: "反间谍特别行动机构 2.0"
+ BLR_SMERSH_2_desc: "我们将复活反间谍特别行动机构。是时候利用苏联的经验造福国家了。"
+ BLR_arest_silovic: "清洗安全部队"
+ BLR_arest_silovic_desc: "许多安保机关与新政府意见相左，是时候清除掉他们了。"
  BLR_antigay_propaganda_laws: "反同性恋宣传法"
  BLR_antigay_propaganda_laws_desc: "是时候合法禁止我国的LGBT了"
  BLR_clean_soc_net: "清理社会网络"
@@ -594,10 +594,6 @@
  BLR_Minsk_Agreements_desc: "我们已经准备好促进乌克兰的和平，并且准备向我们提出建立乌克兰和平的谈判平台。"
  BLR_war_is_war: "战争即是战争，但亦是金钱......"
  BLR_war_is_war_desc: "尽管乌克兰发生了巨大事件，但我们暂时还没有准备好失去这样一个有利可图的伙伴，并准备出售一些装备。"
- BLR_trade_russia_ukraine: "与俄罗斯和乌克兰建立贸易"
- BLR_trade_russia_ukraine_desc: "我们将利用邻国之间的不和，利用这一优势。"
- BLR_Special_Operation: "特殊军事行动"
- BLR_Special_Operation_desc: "俄罗斯已经开始在乌克兰领土上执行特殊的军事行动。我们很清楚，迟早有一天我们必须参与这场冒险。我们准备好了吗？"
  BLR_People_Militia: "人民武装的建立"
  BLR_People_Militia_desc: "我们已经准备通过一项关于组建人民民兵的法律，这将作为领土防御的储备。每一座村庄都应该有训练有素的群众来对抗敌人，并随后转变为反抗军运动。"
  BLR_Wagner_arrest: "瓦格纳的局势"
@@ -746,7 +742,7 @@
  BLR_Expand_Naftan_Refinery_desc: "我们将扩建这个石油储存设施。"
  BLR_Expansion_Okolovsky_Novoselkovsky: "扩大矿石生产"
  BLR_Expansion_Okolovsky_Novoselkovsky_desc: "从奥科洛夫斯基和诺沃瑟科夫斯基的矿藏中增加矿石产量将为我们带来大量钢材"
- BLR_Problem_duying_vilages: "临终村的问题"
+ BLR_Problem_duying_vilages: "垂死村庄的问题"
  BLR_Problem_duying_vilages_desc: "是时候让我们国家决定如何处理濒临死亡的村庄了。"
  BLR_Economic: "白俄罗斯经济"
  BLR_Economic_desc: "我们需要发展我们的经济，而我们正在使用一些措施来成功实现这个发展。"
@@ -894,7 +890,7 @@
  BLR_verbovka_chinovnik: "§Y招募§!一些地区官员"
  BLR_russian_media: "让俄罗斯媒体介入"
  BLR_russian_market: "整合进俄罗斯市场"
- BLR_russian_fsb: "让FSB代表政府办公室"
+ BLR_russian_fsb: "让俄联邦安全局代表进驻政府办公室"
  BLR_russian_tver: "购买货车"
  BLR_russian_teplovzor: "开启俄罗斯热成像生产"
  BLR_intermarium_faction: "海间联邦"
@@ -1606,7 +1602,7 @@
  BLR_nazbol_bribe_politician_desc: "任何政客都是腐败的——唯一的问题是价格。"
  BLR_nazbol_take_russia: "克里姆林宫上空利莫诺夫的旗帜"
  BLR_nazbol_take_russia_desc: "终于！俄罗斯自由了！"
- BLR_PinskDrev: "注资PinskDrev"
+ BLR_PinskDrev: "注资平斯克德雷夫"
  BLR_PinskDrev_desc: "白俄罗斯木工行业的大型企业，平斯克最古老的企业。我们应该资助他们的活动，以便他们进一步发展。"
  BLR_metro_minsk: "扩建明斯克地铁"
  BLR_metro_minsk_desc: ""
@@ -2141,3 +2137,22 @@
  belarus_another.61.t: "俄罗斯贷款"
  belarus_another.61.d: "俄罗斯政府拒绝向我们提供贷款。"
  belarus_another.61.a: "悲哀"
+ BLR_New_concept_security_desc: "我们的防御理念需要更新，我们将对我们的法律做出新的改变."
+ BLR_Kal: "联合钾肥贸易商"
+ BLR_Kal_desc: "我们将建议俄罗斯成立一家股份公司，作为我们共同的钾肥贸易商。"
+ BLR_Kal2: "关闭联合钾肥贸易商"
+ BLR_Kal2_desc: "最近我们针对俄罗斯乌拉尔钾肥员工发起的刑事案件以及他们滥用职权的行为迫使我们关闭了一家联合交易商并创建了我们自己的交易商。"
+ BLR_kal_with: "私人股份有限公司‘白俄罗斯钾肥公司’"
+ BLR_kal_without: "股份有限公司‘白俄罗斯钾肥公司’"
+ BLR_with_tt: "额外收入：$$§G0.150§!\n"
+ BLR_without_tt: "额外收入：$$§G0.210§!\n"
+ belarus_another.62.t: "白俄罗斯提议建立联合钾肥贸易商"
+ belarus_another.62.d: "白俄罗斯政府提议成立两家企业联合钾肥贸易商。乌拉尔钾肥和白俄罗斯钾肥，因此我们将能够从这一资源中获得更多利润。"
+ belarus_another.62.a: "我们同意"
+ belarus_another.62.b: "我们不同意"
+ belarus_another.63.t: "联合钾肥贸易商"
+ belarus_another.63.d: "俄罗斯政府已同意创建一家联合钾肥贸易公司。"
+ belarus_another.63.a: "好的"
+ belarus_another.64.t: "白俄罗斯关闭联合钾肥贸易商"
+ belarus_another.64.d: "我们两家钾肥贸易企业之间的对抗已经达到极限，白俄罗斯政府决定分配自己的公司并创建自己的贸易商。"
+ belarus_another.64.a: "悲哀"
