--- a/localisation/simp_chinese/MD_game_rules_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_game_rules_l_simp_chinese.yml
@@ -337,9 +337,9 @@
  AI_FIRST_USE: "AI首先使用核武器"
  RULE_YES_AI_FIRST_USE_DESC: "AI可以首先使用§Y核武器§!"
  RULE_NO_AI_FIRST_USE_DESC: "AI不能选择允许首先使用§Y核武器§!的核学说"
- RULE_ALLOW_ENABLE_LEDGER: "启用MD报表"
- RULE_ALLOW_ENABLE_LEDGER_YES_DESC: "MD报表已启用（可能会有一些多余的抵抗组织情报。如果你想玩更高的游戏难度，请禁用此功能。）"
- RULE_ALLOW_ENABLE_LEDGER_NO_DESC: "禁用MD报表。这对于那些更喜欢真实体验并希望利用“抵抗运动”DLC获取关键信息的用户来说更好。"
+ RULE_ALLOW_ENABLE_LEDGER: "启用千禧黎明报表"
+ RULE_ALLOW_ENABLE_LEDGER_YES_DESC: "千禧黎明报表已启用（可能会有一些多余的抵抗组织情报。如果你想玩更高的游戏难度，请禁用此功能。）"
+ RULE_ALLOW_ENABLE_LEDGER_NO_DESC: "禁用千禧黎明报表。这对于那些更喜欢真实体验并希望利用“抵抗运动”DLC获取关键信息的用户来说更好。"
  RULE_HISTORIC_NINE_ELEVEN: "史实9/11触发"
  RULE_HISTORIC_NINE_ELEVEN_NO: "9/11不会随机触发。相反，它将在2001年或更晚的某个时候触发。"
  RULE_HISTORIC_NINE_ELEVEN_YES: "9/11事件将在2001年9月的某个时段触发。"
@@ -426,10 +426,6 @@
  BLR_DEMOCRATIC_DESC: "白俄罗斯将努力建立一个成功的西方民主制度，而不是后苏联的极权主义。"
  BLR_NEUTRALITY: "盖杜克维奇之路"
  BLR_NEUTRALITY_DESC: "由于白俄罗斯政治的模糊性，他将把国家权力掌握在自己手中。作为亲俄寡头，明显希望从与俄罗斯的合作中榨取最大红利。"
- BLR_POLICE_PRIORITY: "重视警察经费"
- BLR_POLICE_PRIORITY_DESC: "我们首先必须为警察提供资金。"
- BLR_ARMY_PRIORITY: "重视陆军经费"
- BLR_ARMY_PRIORITY_DESC: "我们首先必须为军队提供资金。"
  RULE_ALLOW_HELP_GUI_NO: "这将禁用千禧黎明帮助菜单。"
  RULE_OPTION_EARLY_COUP_ESCALATION: "早期政变升级"
  RULE_OPTION_EARLY_COUP_ESCALATION_AI_DESC: "AI将在2000年政变中犯下错误，导致直接通往某些替代历史选项。"
