--- a/localisation/simp_chinese/focus_filter_tag_l_simp_chinese.yml
+++ b/localisation/simp_chinese/focus_filter_tag_l_simp_chinese.yml
@@ -93,3 +93,4 @@
  FOCUS_FILTER_OSSETIA_COMMI: "共产主义"
  FOCUS_FILTER_OSSETIA_NYKHAZ: "讲坛"
  FOCUS_FILTER_OSSETIA_PEOPLE: "人民党"
+ FOCUS_FILTER_SPACE: "太空"
