--- a/localisation/simp_chinese/victory_points_l_simp_chinese.yml
+++ b/localisation/simp_chinese/victory_points_l_simp_chinese.yml
@@ -2122,7 +2122,6 @@
  VICTORY_POINTS_1970: "莎车"
  VICTORY_POINTS_8112: "和田"
  VICTORY_POINTS_4947: "罗布泊"
- VICTORY_POINTS_12656: "乌鲁木齐"
  VICTORY_POINTS_4843: "哈密"
  VICTORY_POINTS_1844: "克拉玛依"
  VICTORY_POINTS_4823: "阿勒泰"
@@ -3058,7 +3057,7 @@
  VICTORY_POINTS_6034: "斯里巴加湾"
  VICTORY_POINTS_7869: "怀特霍斯"
  VICTORY_POINTS_10527: "耶洛奈夫"
- VICTORY_POINTS_2407: "海里弗"
+ VICTORY_POINTS_2407: "海莱夫尔"
  VICTORY_POINTS_1408: "温哥华"
  VICTORY_POINTS_7259: "维多利亚"
  VICTORY_POINTS_7677: "基洛纳"
@@ -4346,5 +4345,6 @@
  VICTORY_POINTS_14737: "加奇萨兰"
  VICTORY_POINTS_12793: "阿哈尔"
  VICTORY_POINTS_14740: "轮台"
- VICTORY_POINTS_17143: "昭苏"
  VICTORY_POINTS_10545: "库尔勒"
+ VICTORY_POINTS_17143: "昭苏"
+ VICTORY_POINTS_13075: "海里弗"
