--- a/localisation/simp_chinese/countries_l_simp_chinese.yml
+++ b/localisation/simp_chinese/countries_l_simp_chinese.yml
@@ -1918,14 +1918,14 @@
  GER_nationalist: "德国"
  GER_nationalist_DEF: "德国"
  GER_nationalist_ADJ: "德国"
- ENG_fascism: "联合王国"
- ENG_fascism_DEF: "联合王国"
+ ENG_fascism: "大英帝国"
+ ENG_fascism_DEF: "大英帝国"
  ENG_democratic: "联合王国"
  ENG_democratic_DEF: "联合王国"
- ENG_neutrality: "联合王国"
- ENG_neutrality_DEF: "联合王国"
- ENG_communism: "联合王国"
- ENG_communism_DEF: "联合王国"
+ ENG_neutrality: "大不列颠"
+ ENG_neutrality_DEF: "大不列颠"
+ ENG_communism: "不列颠联盟"
+ ENG_communism_DEF: "不列颠联盟"
  ENG_fascism_ADJ: "不列颠"
  ENG_democratic_ADJ: "不列颠"
  ENG_neutrality_ADJ: "不列颠"
@@ -1933,14 +1933,14 @@
  ENG_nationalist: "联合王国"
  ENG_nationalist_DEF: "联合王国"
  ENG_nationalist_ADJ: "不列颠"
- SOV_fascism: "俄罗斯"
- SOV_fascism_DEF: "俄罗斯"
+ SOV_fascism: "俄罗斯帝国"
+ SOV_fascism_DEF: "俄罗斯帝国"
  SOV_democratic: "俄罗斯"
  SOV_democratic_DEF: "俄罗斯"
  SOV_neutrality: "俄罗斯"
  SOV_neutrality_DEF: "俄罗斯"
- SOV_communism: "俄罗斯"
- SOV_communism_DEF: "俄罗斯"
+ SOV_communism: "俄罗斯联邦"
+ SOV_communism_DEF: "俄罗斯联邦"
  SOV_fascism_ADJ: "俄罗斯"
  SOV_democratic_ADJ: "俄罗斯"
  SOV_neutrality_ADJ: "俄罗斯"
@@ -1948,15 +1948,15 @@
  SOV_nationalist: "俄罗斯"
  SOV_nationalist_DEF: "俄罗斯"
  SOV_nationalist_ADJ: "俄罗斯"
- USA_fascism: "美国"
- USA_fascism_DEF: "美国"
+ USA_fascism: "美利坚自由帝国"
+ USA_fascism_DEF: "美利坚自由帝国"
  USA_democratic: "美国"
  USA_democratic_DEF: "美国"
  USA_FreeStates_democratic: "美利坚自由邦"
  USA_neutrality: "美国"
  USA_neutrality_DEF: "美国"
- USA_communism: "美国"
- USA_communism_DEF: "美国"
+ USA_communism: "美利坚共产主义联盟"
+ USA_communism_DEF: "美利坚共产主义联盟"
  USA_fascism_ADJ: "美国"
  USA_democratic_ADJ: "美国"
  USA_neutrality_ADJ: "美国"
@@ -2084,14 +2084,14 @@
  SWE_nationalist: "瑞典"
  SWE_nationalist_DEF: "瑞典"
  SWE_nationalist_ADJ: "瑞典"
- FRA_fascism: "法国"
- FRA_fascism_DEF: "法国"
+ FRA_fascism: "法兰西国"
+ FRA_fascism_DEF: "法兰西国"
  FRA_democratic: "法国"
  FRA_democratic_DEF: "法国"
- FRA_neutrality: "法国"
- FRA_neutrality_DEF: "法国"
- FRA_communism: "法国"
- FRA_communism_DEF: "法国"
+ FRA_neutrality: "波旁法国"
+ FRA_neutrality_DEF: "波旁法国"
+ FRA_communism: "法兰西公社"
+ FRA_communism_DEF: "法兰西公社"
  FRA_fascism_ADJ: "法国"
  FRA_democratic_ADJ: "法国"
  FRA_neutrality_ADJ: "法国"
@@ -2549,14 +2549,14 @@
  QUE_nationalist: "魁北克"
  QUE_nationalist_DEF: "魁北克"
  QUE_nationalist_ADJ: "魁北克"
- CHI_fascism: "中国"
- CHI_fascism_DEF: "中国"
- CHI_democratic: "中国"
- CHI_democratic_DEF: "中国"
+ CHI_fascism: "中华帝国"
+ CHI_fascism_DEF: "中华帝国"
+ CHI_democratic: "中华共和国"
+ CHI_democratic_DEF: "中华共和国"
  CHI_neutrality: "中国"
  CHI_neutrality_DEF: "中国"
- CHI_communism: "中国"
- CHI_communism_DEF: "中国"
+ CHI_communism: "中华人民共和国"
+ CHI_communism_DEF: "中华人民共和国"
  CHI_fascism_ADJ: "中国"
  CHI_democratic_ADJ: "中国"
  CHI_neutrality_ADJ: "中国"
