--- a/localisation/simp_chinese/MD_focus_BLR_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_BLR_l_simp_chinese.yml
@@ -78,9 +78,9 @@
  BLR_Military_Exercises_Berezina_2002: "别列津纳2002军事演习"
  BLR_Military_Exercises_Berezina_2002_desc: "2002年，自治领部队在鲍里索夫军事演习贝雷齐纳2002期间第一次在训练场进行了实战演习。"
  BLR_Vsk_100: "VSK-100"
- BLR_Vsk_100_desc: "VSK-100是BSVT研制的7.62 x39mm白俄罗斯自动步枪，是JSC基德玛技术对AKM的改进型号之一。"
+ BLR_Vsk_100_desc: "VSK-100是白俄罗斯特种外贸装备公司研制的7.62 x39mm白俄罗斯自动步枪，是基德玛技术有限公司对AKM的改进型号之一。"
  BLR_VSK_100_BP: "VSK-100BP"
- BLR_VSK_100_BP_desc: "VSK-100BP是一款7.62 x 39毫米白俄罗斯无托突击步枪，由BSVT基于AKM开发。由基德玛技术有限公司生产。"
+ BLR_VSK_100_BP_desc: "VSK-100BP是一款7.62 x 39毫米白俄罗斯无托突击步枪，由白俄罗斯特种外贸装备公司基于AKM开发。由基德玛技术有限公司生产。"
  BLR_Army_doctrine: "陆军学说"
  BLR_Army_doctrine_desc: "是时候让军队自行决定方向了。"
  USSR_Legacy: "苏联的遗产"
@@ -1447,7 +1447,7 @@
  shatilki: "沙蒂尔基"
  berestye: "别列斯季耶"
  BLR_MZKT_tank_manufacturer: "明斯克轮式牵引车厂"
- BLR_BELSPETSVNESHTECHNIKA_materiel_manufacturer: "BSVT"
+ BLR_BELSPETSVNESHTECHNIKA_materiel_manufacturer: "白俄罗斯特种外贸装备公司"
  BLR_558_aircraft_repair_plant_aircraft_manufacturer: "588飞机修理厂"
  BLR_Credit_tec2: "热电厂升级贷款"
  BLR_Credit_tec2_desc: "明斯克的热电厂需要更新，我们将向中国申请贷款。"
@@ -1489,10 +1489,10 @@
  BLR_maz: "明斯克汽车厂"
  BLR_MZKT: "明斯克轮式牵引车厂"
  BLR_minoitor: "米诺托尔服务公司"
- BLR_belspecveshtech: "BSVT"
+ BLR_belspecveshtech: "白俄罗斯特种外贸装备公司"
  BLR_140_zavod: "第140坦克修理厂"
  BLR_asilak: "阿西拉克"
- BLR_asilak_desc: "白俄罗斯多用途轻型装甲车由BSVT公司开发。原型车是俄罗斯“暴风雪”装甲车。"
+ BLR_asilak_desc: "白俄罗斯多用途轻型装甲车由白俄罗斯特种外贸装备公司开发。原型车是俄罗斯“暴风雪”装甲车。"
  BLR_fleita: "多管火箭系统\"长笛\""
  BLR_fleita_desc: "白俄罗斯多管火箭系统，口径80毫米。它创建于2019年，旨在对地面部队和特种作战部队进行直接火力支援，摧毁集中地区的露天和隐蔽的敌方人力、非装甲和轻装甲车辆，摧毁火炮和迫击炮连，解决其他作战问题 作战任务。"
  BLR_polonez: "开始与中国一起开发我们的多管火箭炮"
@@ -1711,8 +1711,8 @@
  BLR_mzkt_rus: "与[SOV.GetNamewithFlag]的底盘供应合同"
  BLR_mzkt_nko: "与[NKO.GetNamewithFlag]的底盘供应合同"
  BLR_mzkt_bsh: "与[BSH.GetNamewithFlag]的底盘供应合同"
- BLR_belvesh_category: "BSVT"
- BLR_belvesh_category_desc: "国有外贸单一企业“BSVT”的活动领域是与军用产品和两用产品、加密手段（工程、服务）、秘密手段相关的科学、生产和外贸活动（包括提供中介服务）信息获取等产品。BSVT在组织上隶属于白俄罗斯共和国国家军工管理局。"
+ BLR_belvesh_category: "白俄罗斯特种外贸装备公司"
+ BLR_belvesh_category_desc: "国有外贸单一企业白俄罗斯特种外贸装备公司的活动领域是与军用产品和两用产品、加密手段（工程、服务）、秘密手段相关的科学、生产和外贸活动（包括提供中介服务）信息获取等产品。白俄罗斯特种外贸装备公司在组织上隶属于白俄罗斯共和国国家军工管理局。"
  BLR_belvesh_t72bm1_1: "资助坦克技术装备的研究"
  BLR_belvesh_t72bm1_2: "资助坦克技术装备的研究"
  BLR_belvesh_t72bm1_3: "资助坦克技术装备的研究"
@@ -2033,7 +2033,7 @@
  belarus_another.54.t: "加入俄罗斯"
  belarus_another.54.d: "白俄罗斯终于回家了。现在我们将成为一个伟大国家的一部分，牺牲我们的自主权，但我们需要它吗？"
  belarus_another.54.a: "终于！"
- BLR_falck_schmidt_tank_manufacturer: "BSVT"
+ BLR_falck_schmidt_tank_manufacturer: "白俄罗斯特种外贸装备公司"
  BLR_State_Run_Capitalism: "国营资本主义"
  BLR_State_Run_Capitalism_desc: "国家应该完全控制国家的经济政策。"
  belorussia_focus: "白俄罗斯国策树"
