--- a/localisation/simp_chinese/equipment_l_simp_chinese.yml
+++ b/localisation/simp_chinese/equipment_l_simp_chinese.yml
@@ -681,7 +681,7 @@
  BLR_infantry_weapons4: "AK-9突击步枪"
  BLR_infantry_weapons4_desc: "AK-9是在AK-104等卡拉什尼科夫100系列突击步枪的基础上开发的，但进行了一定的改进。它是一种选择9×39mm亚音速弹药的火力紧凑型突击步枪。"
  BLR_infantry_weapons5: "VSK-100突击步枪"
- BLR_infantry_weapons5_desc: "VSK-100是一种7.62 x 39毫米白俄罗斯自动步枪，由BSVT公司发展，是AKM的一种改型。由基德玛技术有限公司制作。"
+ BLR_infantry_weapons5_desc: "VSK-100是一种7.62 x 39毫米白俄罗斯自动步枪，由白俄罗斯特种外贸装备公司发展，是AKM的一种改型。由基德玛技术有限公司制作。"
  BLR_infantry_weapons6: "SMAR-100BPM突击步枪"
  BLR_infantry_weapons6_desc: "白俄罗斯VSK-100系列冲锋枪的升级版本，采用7.62毫米子弹，采用牛头式布局。由Ustye产业技术集群开发。smar100bpm的瞄准距离为500米，有效射击距离可达400米。根据射手的喜好，弹匣可以使用30或40发子弹。该机装有新型无焰低噪声射击装置，提高了武器的作战精度和精度。SMART-100 BPM的重量为4.3公斤"
  BLR_APC_1: "BTR-60装甲运输车"
