--- a/localisation/simp_chinese/loading_tips_l_simp_chinese.yml
+++ b/localisation/simp_chinese/loading_tips_l_simp_chinese.yml
@@ -57,7 +57,7 @@
  LOADING_TIP_55: "如果一个人成为一个习惯于自由的城市的主人，却不去摧毁这座城市，那么他可能会被自由摧毁。\n- 尼可罗·马基亚维利 -"
  LOADING_TIP_56: "战争无可避免；拖延战争只是把时机拱手让人。\n- 尼可罗·马基雅维利 -"
  LOADING_TIP_57: "我曾与82个人发起了革命，只要你有信仰和行动计划，人少并不算什么。\n- 菲德尔·卡斯特罗 -"
- LOADING_TIP_58: "卡塔尔只不过是个农村。\n- 亚历克斯·特雷贝克 -"
+ LOADING_TIP_58: "看，安吉拉，别说我什么都没给你。\n- 唐纳德·特朗普，在七国集团峰会上朝安格拉·默克尔丢下星爆糖果后。 -"
  LOADING_TIP_59: "兵者，诡道也。\n- 孙子 -"
  LOADING_TIP_60: "夫兵久而国利者，未之有也。\n- 孙子 -"
  LOADING_TIP_61: "是故百战百胜，非善之善也；不战而屈人之兵，善之善者也。\n- 孙子 -"
