--- a/localisation/simp_chinese/victory_points_l_simp_chinese.yml
+++ b/localisation/simp_chinese/victory_points_l_simp_chinese.yml
@@ -1740,12 +1740,10 @@
  VICTORY_POINTS_11920: "金华"
  VICTORY_POINTS_4013: "乐清"
  VICTORY_POINTS_4099: "苍南"
- VICTORY_POINTS_9944: "衢州"
- VICTORY_POINTS_1195: "永康"
  VICTORY_POINTS_7014: "上海"
  VICTORY_POINTS_11913: "南京"
  VICTORY_POINTS_10034: "苏州"
- VICTORY_POINTS_11982: "常州"
+ VICTORY_POINTS_11982: "镇江"
  VICTORY_POINTS_10076: "无锡"
  VICTORY_POINTS_12052: "昆山"
  VICTORY_POINTS_11928: "南通"
@@ -1753,7 +1751,7 @@
  VICTORY_POINTS_12067: "盐城"
  VICTORY_POINTS_4091: "如皋"
  VICTORY_POINTS_10095: "邳州"
- VICTORY_POINTS_1089: "泰兴"
+ VICTORY_POINTS_1089: "泰州"
  VICTORY_POINTS_9953: "东台"
  VICTORY_POINTS_11973: "徐州"
  VICTORY_POINTS_4123: "淮安"
@@ -1779,21 +1777,17 @@
  VICTORY_POINTS_4071: "淄博"
  VICTORY_POINTS_4037: "泰安"
  VICTORY_POINTS_4089: "东营"
- VICTORY_POINTS_7189: "德州"
- VICTORY_POINTS_7160: "聊城"
  VICTORY_POINTS_11761: "北京"
  VICTORY_POINTS_4137: "天津"
  VICTORY_POINTS_4190: "石家庄"
  VICTORY_POINTS_1169: "邯郸"
  VICTORY_POINTS_11944: "沧州"
- VICTORY_POINTS_4058: "峰峰"
  VICTORY_POINTS_1188: "邢台"
  VICTORY_POINTS_4032: "衡水"
  VICTORY_POINTS_10022: "任丘"
  VICTORY_POINTS_7109: "保定"
  VICTORY_POINTS_6904: "张家口"
- VICTORY_POINTS_1134: "廊坊"
- VICTORY_POINTS_7000: "定州"
+ VICTORY_POINTS_1134: "雄安"
  VICTORY_POINTS_12026: "高碑店"
  VICTORY_POINTS_828: "张北"
  VICTORY_POINTS_12043: "唐山"
@@ -1893,7 +1887,7 @@
  VICTORY_POINTS_4174: "孝义"
  VICTORY_POINTS_1180: "晋城"
  VICTORY_POINTS_1575: "运城"
- VICTORY_POINTS_10367: "离石"
+ VICTORY_POINTS_10367: "吕梁"
  VICTORY_POINTS_7301: "西安"
  VICTORY_POINTS_12156: "泾阳"
  VICTORY_POINTS_7314: "榆林"
@@ -1951,26 +1945,23 @@
  VICTORY_POINTS_9937: "阜阳"
  VICTORY_POINTS_9995: "宿州"
  VICTORY_POINTS_1161: "灵璧"
- VICTORY_POINTS_7126: "亳州"
+ VICTORY_POINTS_7126: "周口"
  VICTORY_POINTS_10434: "太和"
- VICTORY_POINTS_10079: "涡阳"
+ VICTORY_POINTS_10079: "亳州"
  VICTORY_POINTS_4144: "安阳"
  VICTORY_POINTS_1139: "新乡"
  VICTORY_POINTS_11933: "濮阳"
- VICTORY_POINTS_7074: "林州"
  VICTORY_POINTS_4606: "焦作"
  VICTORY_POINTS_9958: "郑州"
  VICTORY_POINTS_11931: "洛阳"
  VICTORY_POINTS_10098: "商丘"
  VICTORY_POINTS_7656: "开封"
  VICTORY_POINTS_7540: "漯河"
- VICTORY_POINTS_4066: "太康"
  VICTORY_POINTS_1004: "巩义"
- VICTORY_POINTS_6932: "灵宝"
+ VICTORY_POINTS_6932: "三门峡"
  VICTORY_POINTS_10364: "许昌"
  VICTORY_POINTS_7459: "南阳"
  VICTORY_POINTS_12012: "平顶山"
- VICTORY_POINTS_7580: "信阳"
  VICTORY_POINTS_12426: "固始"
  VICTORY_POINTS_7568: "驻马店"
  VICTORY_POINTS_4619: "武汉"
@@ -4348,3 +4339,14 @@
  VICTORY_POINTS_10545: "库尔勒"
  VICTORY_POINTS_17143: "昭苏"
  VICTORY_POINTS_13075: "海里弗"
+ VICTORY_POINTS_7174: "衢州"
+ VICTORY_POINTS_11947: "丽水"
+ VICTORY_POINTS_12076: "金山"
+ VICTORY_POINTS_14754: "常州"
+ VICTORY_POINTS_11962: "德州"
+ VICTORY_POINTS_9987: "聊城"
+ VICTORY_POINTS_9969: "廊坊"
+ VICTORY_POINTS_10421: "长治"
+ VICTORY_POINTS_14756: "济源"
+ VICTORY_POINTS_14757: "鹤壁"
+ VICTORY_POINTS_10446: "信阳"
